Fixed Text Alignment

--- a/style.css
+++ b/style.css
@@ -17,10 +17,6 @@
       color: blue;
     }
 
-    h1 {
-      text-align: center;
-      font-weight: bolder;
-    }
     #opener{
       font-family: 'Courier Prime', monospace;
       font-size: 25px;
@@ -33,13 +29,24 @@
       padding: 1%;
     }
     .name-container{
-     width: 150%;
-     margin: auto;
+     padding: 1%;
      
     }
     p {
       text-align: center;
     }
+    .head-text{
+      font-family: Helvetica;
+      overflow: hidden; /* Ensures the content is not revealed until the animation */
+      border-right: .15em solid blue; /* The typwriter cursor */
+      white-space: nowrap; /* Keeps the content on a single line */
+      margin: auto; /* Gives that scrolling effect as the typing happens */
+      letter-spacing: .15em; /* Adjust as needed */
+      animation: typing 2.5s 
+      steps(50, end) forwards,
+      blink-caret .5s step-end infinite;
+    }
+
     .text{
       font-family: Helvetica;
       overflow: hidden; /* Ensures the content is not revealed until the animation */
@@ -50,8 +57,7 @@
       animation: typing 2.5s 
       steps(50, end) forwards,
       blink-caret .5s step-end infinite;
-      justify-content: center;
-        
+      text-align: center;
 }
 
 /* The typing effect*/
